added comment and card section

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <main>
         <!-- ratings of hokey club -->
         <section class="my-16">
-            <div class="lg:w-[1000px] text-center lg:ml-32 space-y-4 border-t-2 border-b-2 border-dashed py-8">
+            <div class="lg:w-[1000px] text-center lg:ml-32 px-4 space-y-4 border-t-2 border-b-2 border-dashed py-8">
                 <h3 class="text-blk-title font-extrabold text-4xl">Professional Hockeys Club</h3>
                 <p class="text-light-blk ">Dit amet consectetur. Condimentum dignissim adipiscing
                     aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
@@ -140,7 +140,7 @@
         </section>
         <!-- Program Section -->
         <section>
-            <div class="lg:w-[1000px] text-center lg:ml-32 space-y-4 border-t-2 border-b-2 border-dashed py-8">
+            <div class="lg:w-[1000px] text-center lg:ml-32 px-4 space-y-4 border-t-2 border-b-2 border-dashed py-8">
                 <h3 class="text-blk-title font-extrabold text-4xl">Program Sections</h3>
                 <p class="text-light-blk ">Dit amet consectetur. Condimentum dignissim adipiscing
                     aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
@@ -179,14 +179,16 @@
                     </div>
                 </div>
                 <!-- program-3 -->
-                <div class="hero lg:w-[1170px] lg:h-[450px] lg:ml-12 mt-5" style="background-image: url(/Images/4.png) ;">
+                <div class="hero lg:w-[1170px] lg:h-[450px] lg:ml-12 mt-5"
+                    style="background-image: url(/Images/4.png) ;">
                     <div class="hero-overlay bg-opacity-60 rounded-xl "></div>
                     <div class="hero-content text-neutral-content text-center">
                         <div class="text-left lg:pr-[500px] pt-36">
                             <h1 class="mb-5 text-2xl font-extrabold">Professional Program</h1>
                             <p class="mb-5 font-medium">
                                 Dolor sit amet consectetur. Ut urna diam quis sagittis. <br> Elit elit
-                                enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla. Tortor
+                                enim sagittis turpis in magna. Id et sed euismod natoque amet <br> nunc morbi nulla.
+                                Tortor
                                 congue sed et in.
                             </p>
                             <button class="bg-bg-btn px-8 h-12 rounded-lg text-white">Register Now!</button>
@@ -195,7 +197,232 @@
                 </div>
             </div>
         </section>
-        <!--  -->
+        <!-- Products Section -->
+        <section class="my-20">
+            <div class="lg:w-[1000px] text-center lg:ml-32 px-4 space-y-4 border-t-2 border-b-2 border-dashed py-8">
+                <h3 class="text-blk-title font-extrabold text-4xl">Program Sections</h3>
+                <p class="text-light-blk ">Dit amet consectetur. Condimentum dignissim adipiscing
+                    aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <div class="my-11">
+                <div class="lg:flex gap-4 justify-center mb-4">
+                    <!-- card-1 -->
+                    <div class="lg:flex items-center p-6 lg:w-[560px] lg:h-[220px] border rounded-xl">
+                        <div>
+                            <img class="w-64 h-36" src="Images/5.png" alt="" />
+                        </div>
+                        <div class="card-body">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-solid text-[#F99808] fa-star"></i>
+                                <p>5.0</p>
+                                <i class="fa-solid fa-eye"></i>
+                                <p>20</p>
+                                <i class="fa-solid fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                            <h2 class="card-title font-extrabold tetx-blk-title text-xl">World Cup Flags Football</h2>
+                            <p class="font-medium text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis
+                                sagittis. </p>
+                            <div class="flex gap-2 items-center">
+                                <p class="text-[#FF4240] font-extrabold text-sm">Price - $22.00</p>
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="font-medium text-[#13131899]"> Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- card-2 -->
+                    <div class="lg:flex items-center p-6 lg:w-[560px] lg:h-[220px] border rounded-xl">
+                        <div>
+                            <img class="w-64 h-36" src="Images/6.png" alt="" />
+                        </div>
+                        <div class="card-body">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-solid text-[#F99808] fa-star"></i>
+                                <p>5.0</p>
+                                <i class="fa-solid fa-eye"></i>
+                                <p>20</p>
+                                <i class="fa-solid fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                            <h2 class="card-title font-extrabold tetx-blk-title text-xl">World Cup Flags Football</h2>
+                            <p class="font-medium text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis
+                                sagittis. </p>
+                            <div class="flex gap-2 items-center">
+                                <p class="text-[#FF4240] font-extrabold text-sm">Price - $22.00</p>
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="font-medium text-[#13131899]"> Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="lg:flex gap-4 justify-center mb-4">
+                    <!-- card-3 -->
+                    <div class="lg:flex items-center p-6 lg:w-[560px] lg:h-[220px] border rounded-xl">
+                        <div>
+                            <img class="w-64 h-36" src="Images/7.png" alt="" />
+                        </div>
+                        <div class="card-body">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-solid text-[#F99808] fa-star"></i>
+                                <p>5.0</p>
+                                <i class="fa-solid fa-eye"></i>
+                                <p>20</p>
+                                <i class="fa-solid fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                            <h2 class="card-title font-extrabold tetx-blk-title text-xl">World Cup Flags Football</h2>
+                            <p class="font-medium text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis
+                                sagittis. </p>
+                            <div class="flex gap-2 items-center">
+                                <p class="text-[#FF4240] font-extrabold text-sm">Price - $22.00</p>
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="font-medium text-[#13131899]"> Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- card-4 -->
+                    <div class="lg:flex items-center p-6 lg:w-[560px] lg:h-[220px] border rounded-xl">
+                        <div>
+                            <img class="w-64 h-36" src="Images/8.png" alt="" />
+                        </div>
+                        <div class="card-body">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-solid text-[#F99808] fa-star"></i>
+                                <p>5.0</p>
+                                <i class="fa-solid fa-eye"></i>
+                                <p>20</p>
+                                <i class="fa-solid fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                            <h2 class="card-title font-extrabold tetx-blk-title text-xl">World Cup Flags Football</h2>
+                            <p class="font-medium text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis
+                                sagittis. </p>
+                            <div class="flex gap-2 items-center">
+                                <p class="text-[#FF4240] font-extrabold text-sm">Price - $22.00</p>
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="font-medium text-[#13131899]"> Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="lg:flex gap-4 justify-center mb-4">
+                    <!-- card-5 -->
+                    <div class="lg:flex items-center p-6 lg:w-[560px] lg:h-[220px] border rounded-xl">
+                        <div>
+                            <img class="w-64 h-36" src="Images/9.png" alt="" />
+                        </div>
+                        <div class="card-body">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-solid text-[#F99808] fa-star"></i>
+                                <p>5.0</p>
+                                <i class="fa-solid fa-eye"></i>
+                                <p>20</p>
+                                <i class="fa-solid fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                            <h2 class="card-title font-extrabold tetx-blk-title text-xl">World Cup Flags Football</h2>
+                            <p class="font-medium text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis
+                                sagittis. </p>
+                            <div class="flex gap-2 items-center">
+                                <p class="text-[#FF4240] font-extrabold text-sm">Price - $22.00</p>
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="font-medium text-[#13131899]"> Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- card-6 -->
+                    <div class="lg:flex items-center p-6 lg:w-[560px] lg:h-[220px] border rounded-xl">
+                        <div>
+                            <img class="w-64 h-36" src="Images/10.png" alt="" />
+                        </div>
+                        <div class="card-body">
+                            <div class="flex items-center gap-2">
+                                <i class="fa-solid text-[#F99808] fa-star"></i>
+                                <p>5.0</p>
+                                <i class="fa-solid fa-eye"></i>
+                                <p>20</p>
+                                <i class="fa-solid fa-heart"></i>
+                                <p>200</p>
+                            </div>
+                            <h2 class="card-title font-extrabold tetx-blk-title text-xl">World Cup Flags Football</h2>
+                            <p class="font-medium text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis
+                                sagittis. </p>
+                            <div class="flex gap-2 items-center">
+                                <p class="text-[#FF4240] font-extrabold text-sm">Price - $22.00</p>
+                                <i class="fa-solid fa-cart-shopping"></i>
+                                <p class="font-medium text-[#13131899]"> Delivery Fee : Free</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- client questions -->
+         <section>
+            <div class="lg:w-[1000px] text-center lg:ml-32 space-y-4 px-4 border-t-2 border-b-2 border-dashed py-8">
+                <h3 class="text-blk-title font-extrabold text-4xl">Clients Question</h3>
+                <p class="text-light-blk ">Dit amet consectetur. Condimentum dignissim adipiscing
+                    aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <!-- Accordion & Questions -->
+             <div class="lg:flex gap-12 my-12 border-2 rounded-xl lg:p-8 items-center lg:m-20">
+                <div>
+                    <img src="Images/11.png" alt="">
+                </div>
+                <div class="mt-4">
+                    <!-- ques-1 -->
+                    <div class="collapse collapse-plus px-6">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-bold text-blk-title">Our Equipment</div>
+                        <div class="collapse-content">
+                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                    <!-- ques-2 -->
+                    <div class="collapse collapse-plus border-t-2 rounded-none px-6">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-bold text-blk-title">Hockey Training</div>
+                        <div class="collapse-content">
+                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                    <!-- ques-3 -->
+                    <div class="collapse collapse-plus border-t-2 rounded-none px-6">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-bold text-blk-title">Private Lessons</div>
+                        <div class="collapse-content">
+                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                    <!-- ques-4 -->
+                    <div class="collapse collapse-plus  border-t-2 rounded-none px-6">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-bold text-blk-title">Ski Touring</div>
+                        <div class="collapse-content">
+                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                    <!-- ques-5 -->
+                    <div class="collapse collapse-plus border-t-2 rounded-none px-6">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-bold text-blk-title">Booking</div>
+                        <div class="collapse-content">
+                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                    <!-- ques-6 -->
+                    <div class="collapse collapse-plus border-t-2 rounded-none px-6">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-bold text-blk-title">Pricings</div>
+                        <div class="collapse-content">
+                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                        </div>
+                      </div>
+                      
+                </div>
+             </div>
+         </section>
     </main>
     <footer>
 
