added get in touch section

--- a/index.html
+++ b/index.html
@@ -359,14 +359,14 @@
             </div>
         </section>
         <!-- client questions -->
-         <section>
+        <section>
             <div class="lg:w-[1000px] text-center lg:ml-32 space-y-4 px-4 border-t-2 border-b-2 border-dashed py-8">
                 <h3 class="text-blk-title font-extrabold text-4xl">Clients Question</h3>
                 <p class="text-light-blk ">Dit amet consectetur. Condimentum dignissim adipiscing
                     aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
             </div>
             <!-- Accordion & Questions -->
-             <div class="lg:flex gap-12 my-12 border-2 rounded-xl lg:p-8 items-center lg:m-20">
+            <div class="lg:flex gap-12 my-12 border-2 rounded-xl lg:p-8 items-center lg:m-20">
                 <div>
                     <img src="Images/11.png" alt="">
                 </div>
@@ -376,53 +376,119 @@
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold text-blk-title">Our Equipment</div>
                         <div class="collapse-content">
-                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                                elit enim sagittis turpis in magna.</p>
                         </div>
-                      </div>
+                    </div>
                     <!-- ques-2 -->
                     <div class="collapse collapse-plus border-t-2 rounded-none px-6">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold text-blk-title">Hockey Training</div>
                         <div class="collapse-content">
-                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                                elit enim sagittis turpis in magna.</p>
                         </div>
-                      </div>
+                    </div>
                     <!-- ques-3 -->
                     <div class="collapse collapse-plus border-t-2 rounded-none px-6">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold text-blk-title">Private Lessons</div>
                         <div class="collapse-content">
-                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                                elit enim sagittis turpis in magna.</p>
                         </div>
-                      </div>
+                    </div>
                     <!-- ques-4 -->
                     <div class="collapse collapse-plus  border-t-2 rounded-none px-6">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold text-blk-title">Ski Touring</div>
                         <div class="collapse-content">
-                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                                elit enim sagittis turpis in magna.</p>
                         </div>
-                      </div>
+                    </div>
                     <!-- ques-5 -->
                     <div class="collapse collapse-plus border-t-2 rounded-none px-6">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold text-blk-title">Booking</div>
                         <div class="collapse-content">
-                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                                elit enim sagittis turpis in magna.</p>
                         </div>
-                      </div>
+                    </div>
                     <!-- ques-6 -->
                     <div class="collapse collapse-plus border-t-2 rounded-none px-6">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-bold text-blk-title">Pricings</div>
                         <div class="collapse-content">
-                          <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis turpis in magna.</p>
+                            <p class="text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                                elit enim sagittis turpis in magna.</p>
                         </div>
-                      </div>
-                      
+                    </div>
                 </div>
-             </div>
-         </section>
+            </div>
+        </section>
+        <section class="my-20">
+            <!-- communication Section -->
+            <div class="lg:w-[1100px] text-center lg:ml-20 space-y-4 px-4 border-t-2 border-b-2 border-dashed py-8">
+                <h3 class="text-blk-title font-extrabold text-4xl">Get In Touch</h3>
+                <p class="text-light-blk ">Dit amet consectetur. Condimentum dignissim adipiscing
+                    aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+            </div>
+            <div class="my-12 flex gap-8">
+                <!-- communication -->
+                <div class="space-y-6 border py-8 px-8 ml-20 w-[400px]">
+                    <!-- phone -->
+                    <div class="w-80 h-44 bg-[#BCED6D1A] p-8 rounded-xl space-y-3 ">
+                        <img src="Images/Group 1171275317.png" alt="">
+                        <p class="text-[#13131866]">Phone Number : </p>
+                        <p class="font-bold">(+62) 123-321-543</p>
+                    </div>
+                    <!-- Email -->
+                    <div class="w-80 h-44 bg-[#BCED6D1A] p-8 rounded-xl space-y-3">
+                        <img src="Images/Group 1171275318.png" alt="">
+                        <p class="text-[#13131866]">Email :</p>
+                        <p class="font-bold">hockeys@support.com</p>
+                    </div>
+                    <!-- Location -->
+                    <div class="w-80 h-44 bg-[#BCED6D1A] p-8 rounded-xl space-y-3">
+                        <img src="Images/Group 1171275321.png" alt="">
+                        <p class="text-[#13131866]">Location : </p>
+                        <p class="font-bold">152/1 Mohakhali Wireless Gate </p>
+                    </div>
+                </div>
+                <!-- form section -->
+                <div class="space-y-6">
+                    <div class="flex gap-8">
+                        <div>
+                            <p class="font-bold text-xl text-blk-title">Your Name</p>
+                            <input type="text" class="border w-80 h-10 mt-4 py-7 pl-3" placeholder="Your Name">
+                        </div>
+                        <div>
+                            <p class="font-bold text-xl text-blk-title">Your Email</p>
+                            <input type="text" class="border w-80 h-10 mt-4 py-7 pl-3" placeholder="Your Email">
+                        </div>
+                    </div>
+                    <div class="flex gap-8">
+                        <div>
+                            <p class="font-bold text-xl text-blk-title">Subject</p>
+                            <input type="text" class="border w-80 h-10 mt-4 py-7 pl-3" placeholder="Subject">
+                        </div>
+                        <div>
+
+                            <p class="font-bold text-xl text-blk-title">Phone Number</p>
+                            <input type="text" class="border w-80 h-10 mt-4 py-7 pl-3" placeholder="Phone Number">
+
+                        </div>
+                    </div>
+                    <div>
+                        <p class="font-bold text-xl text-blk-title mb-5">Message</p>
+                        <input type="text" class="border w-[672px] h-[300px] pl-6 pb-[240px]" placeholder="Write your message">
+                    </div>
+                    <button class="bg-bg-btn w-[672px] h-14 text-white font-bold text-xl rounded-xl">Send Message</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
