--- a/index.html
+++ b/index.html
@@ -435,31 +435,31 @@
                 <p class="text-light-blk ">Dit amet consectetur. Condimentum dignissim adipiscing
                     aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
             </div>
-            <div class="my-12 flex gap-8">
+            <div class="my-12 lg:flex gap-8">
                 <!-- communication -->
-                <div class="space-y-6 border py-8 px-8 ml-20 w-[400px]">
+                <div class="space-y-6 border py-8 px-8 lg:ml-20 lg:w-[400px]">
                     <!-- phone -->
-                    <div class="w-80 h-44 bg-[#BCED6D1A] p-8 rounded-xl space-y-3 ">
+                    <div class="lg:w-80 h-44 bg-[#BCED6D1A] p-8 rounded-xl space-y-3 ">
                         <img src="Images/Group 1171275317.png" alt="">
                         <p class="text-[#13131866]">Phone Number : </p>
                         <p class="font-bold">(+62) 123-321-543</p>
                     </div>
                     <!-- Email -->
-                    <div class="w-80 h-44 bg-[#BCED6D1A] p-8 rounded-xl space-y-3">
+                    <div class="lg:w-80 h-44 bg-[#BCED6D1A] p-8 rounded-xl space-y-3">
                         <img src="Images/Group 1171275318.png" alt="">
                         <p class="text-[#13131866]">Email :</p>
                         <p class="font-bold">hockeys@support.com</p>
                     </div>
                     <!-- Location -->
-                    <div class="w-80 h-44 bg-[#BCED6D1A] p-8 rounded-xl space-y-3">
+                    <div class="lg:w-80 h-44 bg-[#BCED6D1A] p-8 rounded-xl space-y-3">
                         <img src="Images/Group 1171275321.png" alt="">
                         <p class="text-[#13131866]">Location : </p>
                         <p class="font-bold">152/1 Mohakhali Wireless Gate </p>
                     </div>
                 </div>
                 <!-- form section -->
-                <div class="space-y-6">
-                    <div class="flex gap-8">
+                <div class="space-y-6 sm:ml-4">
+                    <div class="lg:flex gap-8">
                         <div>
                             <p class="font-bold text-xl text-blk-title">Your Name</p>
                             <input type="text" class="border w-80 h-10 mt-4 py-7 pl-3" placeholder="Your Name">
@@ -469,7 +469,7 @@
                             <input type="text" class="border w-80 h-10 mt-4 py-7 pl-3" placeholder="Your Email">
                         </div>
                     </div>
-                    <div class="flex gap-8">
+                    <div class="lg:flex gap-8">
                         <div>
                             <p class="font-bold text-xl text-blk-title">Subject</p>
                             <input type="text" class="border w-80 h-10 mt-4 py-7 pl-3" placeholder="Subject">
@@ -483,15 +483,66 @@
                     </div>
                     <div>
                         <p class="font-bold text-xl text-blk-title mb-5">Message</p>
-                        <input type="text" class="border w-[672px] h-[300px] pl-6 pb-[240px]" placeholder="Write your message">
+                        <input type="text" class="border lg:w-[672px] lg:h-[300px] pl-6 pb-[240px]"
+                            placeholder="Write your message">
                     </div>
-                    <button class="bg-bg-btn w-[672px] h-14 text-white font-bold text-xl rounded-xl">Send Message</button>
+                    <button class="bg-bg-btn w-[200px] lg:w-[672px] h-14 text-white font-bold text-xl rounded-xl">Send
+                        Message</button>
                 </div>
             </div>
         </section>
+        <!-- social meadia -->
+        <section class="text-center bg-[#13131805] lg:w-[1100px] w-80 h-28 space-y-5 lg:ml-20 rounded-xl">
+            <h3 class="font-extrabold text-xl pt-7">Social Media</h3>
+            <div class="space-x-4">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="footer text-neutral-content p-10 lg:pl-20 bg-black mt-10">
+        <div class="space-y-2 text-center lg:text-start">
+            <h3 class="font-extrabold text-2xl ml-10 lg:ml-0">Get in Touch</h3>
+            <p class="text-[#FFFFFF99]">Dit amet consectetur. Condimentum <br> adipiscing aliquam turpis placerat dolor. Purus <br> urna in sit
+                nullam proin. </p>
+            <div class="flex items-center gap-3 ml-7 lg:ml-0">
+                <i class="fa-regular text-red-800 fa-envelope"></i>
+                <p>hockeys@support.com</p>
+            </div>
+            <div class="flex items-center gap-3 ml-10 lg:ml-0">
+                <i class="fa-solid text-red-800 fa-phone"></i>
+                <p>(+62) 123-321-543</p>
+            </div>
+        </div>
+        <div class="grid grid-cols-2 lg:grid-cols-3 gap-4 text-center lg:text-start">
+            <nav class="grid grid-cols-1 gap-3">
+                <h6 class="footer-title">Company</h6>
+                <a class="link link-hover">About Us</a>
+                <a class="link link-hover">Leardership </a>
+                <a class="link link-hover">Career</a>
+                <a class="link link-hover">News & article</a>
+                <a class="link link-hover">Legal notice</a>
+            </nav>
+            <nav class="grid grid-cols-1 gap-3" >
+                <h6 class="footer-title">Support</h6>
+                <a class="link link-hover">Help center</a>
+                <a class="link link-hover">FAQ</a>
+                <a class="link link-hover">Ticket Support</a>
+                <a class="link link-hover">Contact Us</a>
+            </nav>
+            <nav class="grid grid-cols-1 gap-3 text-center w-60 lg:text-start ">
+                <h6 class="footer-title">Services</h6>
+                <a class="link link-hover">Academy</a>
+                <a class="link link-hover">Group Lesson</a>
+                <a class="link link-hover">Private Lesson</a>
+                <a class="link link-hover">Hockeys for kids</a>
+                <a class="link link-hover">Hockeys for Adult</a>
+                
+            </nav>
+        </div>
+       
     </footer>
 
 </body>
